monitoring/kube-prometheus-stack/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/hostname: grafana.home.prowe.ca
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: grafana.home.prowe.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.home.prowe.ca
      secretName: grafana-tls
